--- a/about.html
+++ b/about.html
@@ -7,8 +7,7 @@
   <body>
     <h1>About</h1>
     <p>
-      This site is a sample project for the <strong>awesome</strong> Git
-      tutorial <em>Learn Enough<sup>TM</sup> Git to be dangerous</em>.
+      This site is a sample project for the <strong>awesome</strong> Git tutorial <em>Learn Enough<sup>TM</sup> Git to be dangerous</em>.
     </p>
     <img src="images/breaching_whale.jpg">
   </body>
