--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <p>
       This site is a sample project for the <strong>awesome</strong> Git tutorial <a href="https://learnenough.com/git-tutorial"><em>Learn Enough<sup>TM</sup> Git to be dangerous</em></a>.
     </p>
+    <img src="images/polar_bear.jpg" alt="Polar bear" />
   </body>
 </html>
 
