--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <title>About Us</title>
   </head>
   <body>
+    <a href="index.html">Home</a>
     <h1>About Us</h1>
     <p>
       This site is a sample project for the <strong>awesome</strong> Git tutorial <a href="https://learnenough.com/git-tutorial"><em>Learn Enough<sup>TM</sup> Git to be dangerous</em></a>.
