Add placehorders for the TM fix

--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <html> 
   <head>
     <title>About Us</title>
+    <!-- Add something here to fix trademark -->
   </head>
   <body>
     <a href="index.html">Home</a>
